styles.css
* {
    margin: 0;
    padding: 0;
}

body {
    background: #121212;
    height: 200vh;
}

header {
    position: fixed;
    top: 20px;
    left: 50%;
    right: 0;
    transform: translateX(-50%);
    background-color: #3c304a;
    padding: 15px 25px;
    border-radius: 25px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
    transition: background-color 0.3s ease;
    z-index: 1000;
}

header:hover {
    background-color: #413650;
}

nav ul {
    list-style-type:none;
    padding: 0;
    margin: 0;
    display: flex;
    justify-content: center;
}

nav li {
    margin: 0 15px;
}

nav a {
    text-decoration: none;
    color: white;
    transition: color 0.3s ease;
}

nav a:hover {
    color: #f1c40f;
}



.waves {
	position: relative;
	inset: 0;
	display: block;
	width: 100%;
	height: 50%;
}

.waves > path {
    animation: waveAnimation 17390ms ease-in-out infinite alternate-reverse both;
    animation-timing-function: cubic-bezier(.25, 0, .75, 1);
    will-change: transform;
}

.waves > path:nth-of-type(1) {
    animation-duration: 20580ms;
}

.waves > path:nth-of-type(2) {
    animation-delay: -2690ms;
    animation-duration: 13580ms;
}

@keyframes waveAnimation {
    0% {
        transform: translateX(-750px);
    }
    100% {
        transform: translateX(-20px);
    }
}

